--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -1,25 +1,25 @@
 <div class='panel panel-primary'>
     <div class='panel-heading'>
-        Product List
+        {{pageTitle}}
     </div>
     <div class='panel-body'>
         <div class='row'>
             <div class='col-md-2'>Filter by:</div>
             <div class='col-md-4'>
-                <input type="text"/>
+                <input type="text" [(ngModel)]='listFilter'/>
              </div>
         </div>
         <div class='row'>
             <div class='col-md-6'>
-                <h3>Filtered by: </h3>
+                <h3>Filtered by: {{listFilter}} </h3>
             </div>
         </div>
         <div class='table-responsive'>
-            <table class='table'>
+            <table class='table' *ngIf='products && products.length'>
                 <thead>
                     <tr>
                         <th>
-                            <button class='btn btn-primary'> Show Image</button>
+                            <button class='btn btn-primary' (click)='toggleImage()'> {{showImage ? 'Hide' : 'Show'}} Image </button>
                         </th>
                         <th>Product</th>
                         <th>Code</th>
@@ -28,7 +28,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    
+                    <tr *ngFor='let produkto of products'>
+                        <td><img src={{produkto.imageUrl}} title={{produkto.productName}} [style.width.px] = 'imageWidth' [style.margin.px]='imageMargin' *ngIf='showImage'/></td>
+                        <td>{{produkto.productName}}</td>
+                        <td>{{produkto.productCode | lowercase}}</td>
+                        <td>{{produkto.releaseDate}}</td>
+                        <td>{{produkto.price | currency:'USD':true:'1.2-2'}}</td>
+                        <td>{{produkto.starRating}}</td>
+                    </tr>
                 </tbody>
             </table>
         </div>     
