--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class='row'>
             <div class='col-md-6'>
-                <h3>Filtered by: {{listFilter}} </h3>
+                <h3 *ngIf='listFilter'>Filtered by: {{listFilter}} </h3>
             </div>
         </div>
         <div class='table-responsive'>
@@ -28,10 +28,10 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor='let produkto of products'>
+                    <tr *ngFor='let produkto of filteredProducts'>
                         <td><img src={{produkto.imageUrl}} title={{produkto.productName}} [style.width.px] = 'imageWidth' [style.margin.px]='imageMargin' *ngIf='showImage'/></td>
                         <td>{{produkto.productName}}</td>
-                        <td>{{produkto.productCode | lowercase}}</td>
+                        <td>{{produkto.productCode | lowercase| ToSpaces:'-'}}</td>
                         <td>{{produkto.releaseDate}}</td>
                         <td>{{produkto.price | currency:'USD':true:'1.2-2'}}</td>
                         <td>{{produkto.starRating}}</td>
